# toy-compiler

./: .gitignore  CMakeLists.txt
src/: gram.cpp  gram.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  symbols.cpp  symbols.hpp  tokens.cpp  tokens.hpp
